deploy: c225b9bc8275427dd17229336aea3f95e13ac384

--- a/print.html
+++ b/print.html
@@ -149,6 +149,7 @@
 <p>During this chapter, you will be familiarised with Rust programming language and it's main concepts and grammar. Feel free to experiment in <em>nvim</em>.</p>
 <p>If you're already familiar with Rust, or you do know much about programming and do not care about Rust terminology, feel free to skip this chapter and get back as soon as you wish so...</p>
 <p><strong>P.S.</strong> You can run examples right in the browser to see the output, but you can't edit them.</p>
+<iframe src="https://github.com/sponsors/nutek-terminal/card" title="Sponsor nutek-terminal" height="225" width="600" style="border: 0;"></iframe>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="defining-simple-variables-in-rust"><a class="header" href="#defining-simple-variables-in-rust">Defining simple variables in Rust</a></h1>
 <p>In Rust, you can define variables using the <code>let</code> keyword. Rust is a statically-typed language, which means that you need to specify the type of the variable explicitly or let the compiler infer it based on the assigned value. Here's an example of defining variables in Rust:</p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
