--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 <p>During this chapter, you will be familiarised with Rust programming language and it's main concepts and grammar. Feel free to experiment in <em>nvim</em>.</p>
 <p>If you're already familiar with Rust, or you do know much about programming and do not care about Rust terminology, feel free to skip this chapter and get back as soon as you wish so...</p>
 <p><strong>P.S.</strong> You can run examples right in the browser to see the output, but you can't edit them.</p>
+<iframe src="https://github.com/sponsors/nutek-terminal/card" title="Sponsor nutek-terminal" height="225" width="600" style="border: 0;"></iframe>
 
                     </main>
 
